--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ name = "nockup"
 path = "src/main.rs"
 
 [dependencies]
+# NockVM
+nockapp = { git = "https://github.com/zorp-corp/nockchain.git", branch = "master" }
+nockvm = { git = "https://github.com/zorp-corp/nockchain.git", branch = "master" }
+
 # CLI parsing and structure
 clap = { version = "4.4", features = ["derive", "cargo"] }
 
