--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ path = "src/main.rs"
 [dependencies]
 # NockVM
 nockapp = { git = "https://github.com/zorp-corp/nockchain.git", branch = "master" }
-nockvm = { git = "https://github.com/zorp-corp/nockchain.git", branch = "master" }
+#nockvm = { git = "https://github.com/zorp-corp/nockchain.git", branch = "master" }
 
 # CLI parsing and structure
 clap = { version = "4.4", features = ["derive", "cargo"] }
