--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,13 @@ colored = "2.0"
 anyhow = "1.0"
 thiserror = "1.0"
 
+# Directories
+dirs = "5.0"
+
+serde_json = "1.0"
+
+walkdir = "2.4"
+
 [build-dependencies]
 # For generating version info at build time
 chrono = { version = "0.4", features = ["serde"] }
