--- a/manifests/channel-nockup-stable.toml
+++ b/manifests/channel-nockup-stable.toml
@@ -14,31 +14,26 @@ components = ["core"]
 components = ["core"]
 
 # Platform-specific entries
-[pkg.nockup.target.x86_64-unknown-linux-gnu]
+[pkg.nockup.target.x86_64]
 available = true
 url = "https://your-domain.com/dist/nockup-v1.0.0-x86_64-unknown-linux-gnu.tar.gz"
 md5 = "a1b2c3d4e5f67890abcdef1234567890"
 
-[pkg.nockup.target.aarch64-apple-darwin]
+[pkg.nockup.target.aarch64]
 available = true
 url = "https://your-domain.com/dist/nockup-v1.0.0-aarch64-apple-darwin.tar.gz"
 md5 = "fedcba0987654321fedcba0987654321"
 
-[pkg.nockup.target.x86_64-pc-windows-msvc]
-available = true
-url = "https://your-domain.com/dist/nockup-v1.0.0-x86_64-pc-windows-msvc.zip"  # Use .zip for Windows if preferred
-md5 = "1234567890abcdef1234567890abcdef"
-
 # Hoonc binaries
 # [pkg.hoonc.target.x86_64-unknown-linux-gnu]
-[pkg.hoonc.target.aarch64-apple-darwin]
+[pkg.hoonc.target.aarch64]
 available = true
 url = "https://your-domain.com/dist/hoonc-v1.0.0-aarch64-apple-darwin"
 md5 = "58a60d97ba35665cdb36e04c9e9d9a10"
 
 # Hoon binaries
 # [pkg.hoon.target.x86_64-unknown-linux-gnu]
-[pkg.hoon.target.aarch64-apple-darwin]
+[pkg.hoon.target.aarch64]
 available = true
 url = "https://your-domain.com/dist/hoon-v1.0.0-aarch64-apple-darwin"
 md5 = "dcb763e0e8ec683b821af7978b174212"
