--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,7 +60,11 @@ serde_json = "1.0"
 
 walkdir = "2.4"
 
-md5 = "0.7"
+blake3 = "1.8.2"
+
+sha1 = "0.10.6"
+
+hex = "0.4"
 
 [build-dependencies]
 # For generating version info at build time
