--- a/default-manifest-with-libraries.toml
+++ b/default-manifest-with-libraries.toml
@@ -24,3 +24,8 @@ directory = "libmath"
 url = "https://github.com/urbit/numerics"
 directory = "lagoon"
 commit = "7c11c48ab3f21135caa5a4e8744a9c3f828f2607"
+
+[libraries.bits]
+url = "https://github.com/urbit/urbit"
+branch = "develop"
+file = "pkg/arvo/lib/bits.hoon"
