--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,14 +50,14 @@ jobs:
       - name: Extract Cargo versions
         id: cargo-versions
         run: |
-          # Get workspace version from root Cargo.toml for hoon
-          HOON_VERSION=$(awk '/\[workspace.package\]/,/^\[/ {if ($0 ~ /^[[:space:]]*version[[:space:]]*=/) {gsub(/.*"/, ""); gsub(/".*/, ""); print; exit}}' Cargo.toml)
+          # Get workspace version - simpler approach
+          HOON_VERSION=$(sed -n '/\[workspace.package\]/,/\[/p' Cargo.toml | grep '^version' | cut -d'"' -f2)
           
-          # Get hoonc version directly from its Cargo.toml
-          HOONC_VERSION=$(grep '^[[:space:]]*version[[:space:]]*=' crates/hoonc/Cargo.toml | grep -v 'workspace' | sed 's/.*=[[:space:]]*"\([^"]*\)".*/\1/' | head -1)
+          # Get hoonc version
+          HOONC_VERSION=$(grep '^version' crates/hoonc/Cargo.toml | cut -d'"' -f2)
           
-          # Get nockup version directly from its Cargo.toml
-          NOCKUP_VERSION=$(grep '^[[:space:]]*version[[:space:]]*=' crates/nockup/Cargo.toml | grep -v 'workspace' | sed 's/.*=[[:space:]]*"\([^"]*\)".*/\1/' | head -1)
+          # Get nockup version  
+          NOCKUP_VERSION=$(grep '^version' crates/nockup/Cargo.toml | cut -d'"' -f2)
           
           # For nightly, append date
           if [[ "${{ steps.channel.outputs.channel }}" == "nightly" ]]; then
@@ -68,15 +68,13 @@ jobs:
           fi
           
           # Debug output
-          echo "HOON_VERSION='$HOON_VERSION' (from workspace)"
-          echo "HOONC_VERSION='$HOONC_VERSION' (from local Cargo.toml)"
-          echo "NOCKUP_VERSION='$NOCKUP_VERSION' (from local Cargo.toml)"
+          echo "HOON_VERSION='$HOON_VERSION'"
+          echo "HOONC_VERSION='$HOONC_VERSION'"
+          echo "NOCKUP_VERSION='$NOCKUP_VERSION'"
           
           # Validate versions
           if [[ -z "$HOON_VERSION" || -z "$HOONC_VERSION" || -z "$NOCKUP_VERSION" ]]; then
             echo "Error: Missing version in one or more Cargo.toml files"
-            echo "Debugging root Cargo.toml workspace section:"
-            grep -A 10 '\[workspace.package\]' Cargo.toml || echo "No [workspace.package] section found"
             exit 1
           fi
           
