--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,13 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+            use_zigbuild: false
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            use_zigbuild: true
           - os: macos-latest
             target: aarch64-apple-darwin
+            use_zigbuild: false
     permissions:
       contents: write  # Required for action-gh-release
     steps:
@@ -84,42 +89,95 @@ jobs:
           echo "Extracted versions: hoon=$HOON_VERSION, hoonc=$HOONC_VERSION, nockup=$NOCKUP_VERSION"
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@nightly
         with:
           targets: ${{ matrix.target }}
 
+      - name: Install Zig and cargo-zigbuild
+        if: matrix.use_zigbuild
+        run: |
+          # Install Zig
+          wget -q https://ziglang.org/download/0.13.0/zig-linux-x86_64-0.13.0.tar.xz
+          tar -xf zig-linux-x86_64-0.13.0.tar.xz
+          sudo mv zig-linux-x86_64-0.13.0 /usr/local/zig
+          sudo ln -s /usr/local/zig/zig /usr/local/bin/zig
+          zig version
+          
+          # Install cargo-zigbuild
+          cargo install --locked cargo-zigbuild
+
+          # Add target
+          rustup target add ${{ matrix.target }}
+
       - name: Cache Rust dependencies
         uses: swatinem/rust-cache@v2
+        with:
+          key: ${{ matrix.target }}
 
       - name: Install required tools for manifest generation
         run: |
-          # Install blake3 hash tool for manifest generation
-          cargo install b3sum
-          # Install jq for JSON parsing
-          if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
+          # Install blake3 hash tool from pre-built binaries
+          if [[ "${{ runner.os }}" == "Linux" ]]; then
+            wget -q https://github.com/BLAKE3-team/BLAKE3/releases/download/1.5.0/b3sum_linux_x64_bin -O b3sum
+            chmod +x b3sum
+            sudo mv b3sum /usr/local/bin/
             sudo apt-get update
             sudo apt-get install -y jq
-          elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
-            brew install jq
+          elif [[ "${{ runner.os }}" == "macOS" ]]; then
+            brew install b3sum jq
           fi
 
-      - name: Build hoon
+      - name: Install cross-compilation dependencies
+        if: matrix.use_zigbuild
         run: |
-          cargo build --release --bin hoon --manifest-path crates/hoon/Cargo.toml --locked
-          file target/release/hoon
+          # Install perl (needed for OpenSSL build)
+          sudo apt-get update
+          sudo apt-get install -y perl
+
+      - name: Build hoon
+        env:
+          CC: ${{ matrix.use_zigbuild && 'zig cc -target aarch64-linux-gnu' || '' }}
+          CXX: ${{ matrix.use_zigbuild && 'zig c++ -target aarch64-linux-gnu' || '' }}
+          AR: ${{ matrix.use_zigbuild && 'zig ar' || '' }}
+        run: |
+          if [[ "${{ matrix.use_zigbuild }}" == "true" ]]; then
+            cargo zigbuild --release --bin hoon --manifest-path crates/hoon/Cargo.toml --locked --target ${{ matrix.target }}
+            file target/${{ matrix.target }}/release/hoon
+          else
+            cargo build --release --bin hoon --manifest-path crates/hoon/Cargo.toml --locked
+            file target/release/hoon
+          fi
 
       - name: Build hoonc
+        env:
+          CC: ${{ matrix.use_zigbuild && 'zig cc -target aarch64-linux-gnu' || '' }}
+          CXX: ${{ matrix.use_zigbuild && 'zig c++ -target aarch64-linux-gnu' || '' }}
+          AR: ${{ matrix.use_zigbuild && 'zig ar' || '' }}
         run: |
-          cargo build --release --bin hoonc --manifest-path crates/hoonc/Cargo.toml --locked
-          file target/release/hoonc
+          if [[ "${{ matrix.use_zigbuild }}" == "true" ]]; then
+            cargo zigbuild --release --bin hoonc --manifest-path crates/hoonc/Cargo.toml --locked --target ${{ matrix.target }}
+            file target/${{ matrix.target }}/release/hoonc
+          else
+            cargo build --release --bin hoonc --manifest-path crates/hoonc/Cargo.toml --locked
+            file target/release/hoonc
+          fi
 
       - name: Build nockup
+        env:
+          CC: ${{ matrix.use_zigbuild && 'zig cc -target aarch64-linux-gnu' || '' }}
+          CXX: ${{ matrix.use_zigbuild && 'zig c++ -target aarch64-linux-gnu' || '' }}
+          AR: ${{ matrix.use_zigbuild && 'zig ar' || '' }}
         run: |
-          cargo build --release --bin nockup --manifest-path crates/nockup/Cargo.toml --locked
-          file target/release/nockup
+          if [[ "${{ matrix.use_zigbuild }}" == "true" ]]; then
+            cargo zigbuild --release --bin nockup --manifest-path crates/nockup/Cargo.toml --target ${{ matrix.target }} --features vendored-openssl
+            file target/${{ matrix.target }}/release/nockup
+          else
+            cargo build --release --bin nockup --manifest-path crates/nockup/Cargo.toml --locked
+            file target/release/nockup
+          fi
 
       - name: Set up GPG
-        if: matrix.os == 'ubuntu-latest' && github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/nightly' || github.ref_type == 'tag')
+        if: runner.os == 'Linux' && github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/nightly' || github.ref_type == 'tag')
         run: |
           # Import GPG private key
           echo "${{ secrets.GPG_PRIVATE_KEY }}" | tr -d '\n' | base64 -d | gpg --batch --import
@@ -137,77 +195,43 @@ jobs:
         run: |
           mkdir -p dist
           CHANNEL="${{ steps.channel.outputs.channel }}"
-          HOON_VERSION="${{ steps.cargo-versions.outputs.hoon_version }}"
-          HOONC_VERSION="${{ steps.cargo-versions.outputs.hoonc_version }}"
-          NOCKUP_VERSION="${{ steps.cargo-versions.outputs.nockup_version }}"
-          SHOULD_SIGN="${{ matrix.os == 'ubuntu-latest' && github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/nightly' || github.ref_type == 'tag') }}"
+          SHOULD_SIGN="${{ runner.os == 'Linux' && github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/nightly' || github.ref_type == 'tag') }}"
           
           if [[ "$CHANNEL" == "pr" ]]; then
             echo "Skipping packaging for PRs"
             exit 0
           fi
           
-          # Copy and make executable (using root target/release/)
-          if [ -f target/release/hoon ]; then
-            cp target/release/hoon dist/hoon
-            chmod +x dist/hoon
+          # Determine binary directory based on build method
+          if [[ "${{ matrix.use_zigbuild }}" == "true" ]]; then
+            BINARY_DIR="target/${{ matrix.target }}/release"
           else
-            echo "Skipping hoon copy: binary missing"
-          fi
-          if [ -f target/release/hoonc ]; then
-            cp target/release/hoonc dist/hoonc
-            chmod +x dist/hoonc
-          else
-            echo "Skipping hoonc copy: binary missing"
-          fi
-          if [ -f target/release/nockup ]; then
-            cp target/release/nockup dist/nockup
-            chmod +x dist/nockup
-          else
-            echo "Skipping nockup copy: binary missing"
+            BINARY_DIR="target/release"
           fi
           
-          # Sign individual binaries if this is a release build
-          if [[ "$SHOULD_SIGN" == "true" ]]; then
-            echo "Signing binaries..."
-            if [ -f dist/hoon ]; then
-              echo "${{ secrets.GPG_PASSPHRASE }}" | gpg --batch --yes --passphrase-fd 0 --pinentry-mode loopback --detach-sign --armor --default-key "${{ secrets.GPG_KEY_ID }}" dist/hoon
-              echo "Created dist/hoon.asc"
+          # Copy and make executable
+          for binary in hoon hoonc nockup; do
+            if [ -f "$BINARY_DIR/$binary" ]; then
+              cp "$BINARY_DIR/$binary" dist/$binary
+              chmod +x dist/$binary
+              
+              # Sign individual binary if this is a release build
+              if [[ "$SHOULD_SIGN" == "true" ]]; then
+                echo "${{ secrets.GPG_PASSPHRASE }}" | gpg --batch --yes --passphrase-fd 0 --pinentry-mode loopback --detach-sign --armor --default-key "${{ secrets.GPG_KEY_ID }}" dist/$binary
+                echo "Created dist/$binary.asc"
+              fi
+              
+              # Create archive
+              tar -czf dist/${binary}-${CHANNEL}-latest-${{ matrix.target }}.tar.gz -C dist $binary
+              
+              # Sign the archive if this is a release build
+              if [[ "$SHOULD_SIGN" == "true" ]]; then
+                echo "${{ secrets.GPG_PASSPHRASE }}" | gpg --batch --yes --passphrase-fd 0 --pinentry-mode loopback --detach-sign --armor --default-key "${{ secrets.GPG_KEY_ID }}" dist/${binary}-${CHANNEL}-latest-${{ matrix.target }}.tar.gz
+              fi
+            else
+              echo "Skipping $binary: binary missing at $BINARY_DIR/$binary"
             fi
-            if [ -f dist/hoonc ]; then
-              echo "${{ secrets.GPG_PASSPHRASE }}" | gpg --batch --yes --passphrase-fd 0 --pinentry-mode loopback --detach-sign --armor --default-key "${{ secrets.GPG_KEY_ID }}" dist/hoonc
-              echo "Created dist/hoonc.asc"
-            fi
-            if [ -f dist/nockup ]; then
-              echo "${{ secrets.GPG_PASSPHRASE }}" | gpg --batch --yes --passphrase-fd 0 --pinentry-mode loopback --detach-sign --armor --default-key "${{ secrets.GPG_KEY_ID }}" dist/nockup
-              echo "Created dist/nockup.asc"
-            fi
-          else
-            echo "Skipping binary signing for non-release builds"
-          fi
-          
-          # Create archives with channel and per-crate versions
-          if [ -f dist/hoon ]; then
-            tar -czf dist/hoon-${CHANNEL}-latest-${{ matrix.target }}.tar.gz -C dist hoon
-            # Sign the archive if this is a release build
-            if [[ "$SHOULD_SIGN" == "true" ]]; then
-              gpg --batch --yes --pinentry-mode loopback --detach-sign --armor --default-key "${{ secrets.GPG_KEY_ID }}" dist/hoon-${CHANNEL}-latest-${{ matrix.target }}.tar.gz
-            fi
-          fi
-          if [ -f dist/hoonc ]; then
-            tar -czf dist/hoonc-${CHANNEL}-latest-${{ matrix.target }}.tar.gz -C dist hoonc
-            # Sign the archive if this is a release build
-            if [[ "$SHOULD_SIGN" == "true" ]]; then
-              gpg --batch --yes --pinentry-mode loopback --detach-sign --armor --default-key "${{ secrets.GPG_KEY_ID }}" dist/hoonc-${CHANNEL}-latest-${{ matrix.target }}.tar.gz
-            fi
-          fi
-          if [ -f dist/nockup ]; then
-            tar -czf dist/nockup-${CHANNEL}-latest-${{ matrix.target }}.tar.gz -C dist nockup
-            # Sign the archive if this is a release build
-            if [[ "$SHOULD_SIGN" == "true" ]]; then
-              gpg --batch --yes --pinentry-mode loopback --detach-sign --armor --default-key "${{ secrets.GPG_KEY_ID }}" dist/nockup-${CHANNEL}-latest-${{ matrix.target }}.tar.gz
-            fi
-          fi
+          done
           
           echo "Packaged artifacts for channel $CHANNEL:"
           ls -la dist/
@@ -264,18 +288,12 @@ jobs:
           
           # Generate manifests for each binary that was built
           CHANNEL="${{ steps.channel.outputs.channel }}"
-          if [ -f "dist/hoon-${CHANNEL}-latest-${{ matrix.target }}.tar.gz" ]; then
-            ./scripts/generate-manifest.sh hoon ${{ matrix.target }} "${CHANNEL}" "latest" > "hoon-${{ matrix.target }}-manifest.toml"
-            echo "Generated manifest for hoon"
-          fi
-          if [ -f "dist/hoonc-${CHANNEL}-latest-${{ matrix.target }}.tar.gz" ]; then
-            ./scripts/generate-manifest.sh hoonc ${{ matrix.target }} "${CHANNEL}" "latest" > "hoonc-${{ matrix.target }}-manifest.toml"
-            echo "Generated manifest for hoonc"
-          fi
-          if [ -f "dist/nockup-${CHANNEL}-latest-${{ matrix.target }}.tar.gz" ]; then
-            ./scripts/generate-manifest.sh nockup ${{ matrix.target }} "${CHANNEL}" "latest" > "nockup-${{ matrix.target }}-manifest.toml"
-            echo "Generated manifest for nockup"
-          fi
+          for binary in hoon hoonc nockup; do
+            if [ -f "dist/${binary}-${CHANNEL}-latest-${{ matrix.target }}.tar.gz" ]; then
+              ./scripts/generate-manifest.sh $binary ${{ matrix.target }} "${CHANNEL}" "latest" > "${binary}-${{ matrix.target }}-manifest.toml"
+              echo "Generated manifest for $binary"
+            fi
+          done
 
       - name: Upload individual manifests
         if: steps.channel.outputs.channel != 'pr'
@@ -286,18 +304,18 @@ jobs:
           retention-days: 7
 
       - name: Upload release assets
-        if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/nightly' || github.ref_type == 'tag')  # Only on qualifying pushes/tags, not PRs
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/nightly' || github.ref_type == 'tag')
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ steps.channel.outputs.channel }}-build-${{ github.sha }}
           name: ${{ steps.channel.outputs.channel }} Build ${{ github.sha }}
           files: |
             dist/hoon-${{ steps.channel.outputs.channel }}-latest-${{ matrix.target }}.tar.gz
-            ${{ matrix.os == 'ubuntu-latest' && format('dist/hoon-{0}-latest-{2}.tar.gz.asc', steps.channel.outputs.channel, steps.cargo-versions.outputs.hoon_version, matrix.target) || '' }}
+            ${{ runner.os == 'Linux' && format('dist/hoon-{0}-latest-{1}.tar.gz.asc', steps.channel.outputs.channel, matrix.target) || '' }}
             dist/hoonc-${{ steps.channel.outputs.channel }}-latest-${{ matrix.target }}.tar.gz
-            ${{ matrix.os == 'ubuntu-latest' && format('dist/hoonc-{0}-latest-{2}.tar.gz.asc', steps.channel.outputs.channel, steps.cargo-versions.outputs.hoonc_version, matrix.target) || '' }}
+            ${{ runner.os == 'Linux' && format('dist/hoonc-{0}-latest-{1}.tar.gz.asc', steps.channel.outputs.channel, matrix.target) || '' }}
             dist/nockup-${{ steps.channel.outputs.channel }}-latest-${{ matrix.target }}.tar.gz
-            ${{ matrix.os == 'ubuntu-latest' && format('dist/nockup-{0}-latest-{2}.tar.gz.asc', steps.channel.outputs.channel, steps.cargo-versions.outputs.nockup_version, matrix.target) || '' }}
+            ${{ runner.os == 'Linux' && format('dist/nockup-{0}-latest-{1}.tar.gz.asc', steps.channel.outputs.channel, matrix.target) || '' }}
 
   collate-manifests:
     name: Collate Channel Manifests
