Revise ahead of nockchain/nockchain merger.

--- a/templates/basic/Cargo.toml
+++ b/templates/basic/Cargo.toml
@@ -11,9 +11,9 @@ path = "src/main.rs"
 
 [dependencies]
 # NockVM dependency
-nockapp = { git = "https://github.com/zorp-corp/nockchain.git", rev = "{{nockapp_commit_hash}}" }
-nockvm = { git = "https://github.com/zorp-corp/nockchain.git", rev = "{{nockapp_commit_hash}}" }
-nockvm_macros = { git = "https://github.com/zorp-corp/nockchain.git", rev = "{{nockapp_commit_hash}}" }
+nockapp = { git = "https://github.com/nockchain/nockchain.git", rev = "{{nockapp_commit_hash}}" }
+nockvm = { git = "https://github.com/nockchain/nockchain.git", rev = "{{nockapp_commit_hash}}" }
+nockvm_macros = { git = "https://github.com/nockchain/nockchain.git", rev = "{{nockapp_commit_hash}}" }
 
 # Common dependencies for NockApps
 serde = { version = "1.0", features = ["derive"] }
